--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
